--- a/dato/regression/Predicting house prices.ipynb
+++ b/dato/regression/Predicting house prices.ipynb
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -1614,32 +1614,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROGRESS: Creating a validation set from 5 percent of training data. This may take a while.\n",
-      "          You can set ``validation_set=None`` to disable validation tracking.\n",
-      "\n",
       "PROGRESS: Linear regression:\n",
       "PROGRESS: --------------------------------------------------------\n",
-      "PROGRESS: Number of examples          : 16457\n",
+      "PROGRESS: Number of examples          : 17384\n",
       "PROGRESS: Number of features          : 18\n",
       "PROGRESS: Number of unpacked features : 18\n",
       "PROGRESS: Number of coefficients    : 127\n",
       "PROGRESS: Starting Newton Method\n",
       "PROGRESS: --------------------------------------------------------\n",
-      "PROGRESS: +-----------+----------+--------------+--------------------+----------------------+---------------+-----------------+\n",
-      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Validation-max_error | Training-rmse | Validation-rmse |\n",
-      "PROGRESS: +-----------+----------+--------------+--------------------+----------------------+---------------+-----------------+\n",
-      "PROGRESS: | 1         | 2        | 0.032107     | 3472286.507403     | 1399031.488186       | 154454.400318 | 160091.121078   |\n",
-      "PROGRESS: +-----------+----------+--------------+--------------------+----------------------+---------------+-----------------+\n"
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 0.032847     | 3469012.450663     | 154580.940735 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n"
      ]
     }
    ],
    "source": [
-    "advanced_features_model = graphlab.linear_regression.create(train_data, target='price',features=advanced_features)"
+    "advanced_features_model = graphlab.linear_regression.create(train_data, target='price',features=advanced_features, validation_set=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -1650,7 +1647,7 @@
        "{'max_error': 3486584.509381928, 'rmse': 179542.43331269105}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -1669,10 +1666,10 @@
     {
      "data": {
       "text/plain": [
-       "{'max_error': 3542542.6989222057, 'rmse': 156407.58646074482}"
+       "{'max_error': 3556849.413848093, 'rmse': 156831.11680191013}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
